# basil

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: draft_release.yml  release.yml
sample_benchmarks/: benchmark_matrix_inverse.py  benchmark_simple.py
